--- a/build.gradle
+++ b/build.gradle
@@ -19,20 +19,28 @@ repositories {
 dependencies {
     implementation "io.ktor:ktor-server-core-jvm:$ktor_version"
     implementation "io.ktor:ktor-server-netty-jvm:$ktor_version"
-    implementation "ch.qos.logback:logback-classic:$logback_version"
+    implementation "io.ktor:ktor-server-content-negotiation:$ktor_version"
+    implementation "io.ktor:ktor-server-cors:$ktor_version"
+    implementation 'io.ktor:ktor-server-cors-jvm:2.1.2'
+    implementation "io.ktor:ktor-serialization-kotlinx-json:$ktor_version"
+
+    implementation("io.ktor:ktor-client-core:$ktor_version")
+    implementation("io.ktor:ktor-client-cio:$ktor_version")
+
+    testImplementation "io.ktor:ktor-server-tests-jvm:$ktor_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit5:$kotlin_version"
+
+    testImplementation "com.microsoft.playwright:playwright:$playwright_version"
 
     implementation "org.jetbrains.exposed:exposed-core:$exposed_version"
     implementation "org.jetbrains.exposed:exposed-dao:$exposed_version"
     implementation "org.jetbrains.exposed:exposed-jdbc:$exposed_version"
+
+    implementation "org.kodein.di:kodein-di:7.18.0"
+
+    implementation "ch.qos.logback:logback-classic:$logback_version"
+
     implementation "com.h2database:h2:$h2_version"
-
-    implementation "io.ktor:ktor-server-content-negotiation:$ktor_version"
-    implementation "io.ktor:ktor-serialization-kotlinx-json:$ktor_version"
-    implementation "io.ktor:ktor-server-cors:$ktor_version"
-    implementation 'io.ktor:ktor-server-cors-jvm:2.1.2'
-
-    testImplementation "io.ktor:ktor-server-tests-jvm:$ktor_version"
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
 
 tasks.register('clientInstall') {
@@ -53,4 +61,8 @@ tasks.register('clientBuild') {
 tasks.register('runFull') {
     dependsOn('clientBuild')
     dependsOn(run)
+}
+
+test {
+    useJUnitPlatform()
 }
