--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
-ktor_version=2.1.2
-kotlin_version=1.7.20
+ktor_version=2.2.4
+kotlin_version=1.8.10
 logback_version=1.2.11
-exposed_version=0.40.1
+exposed_version=0.41.1
 h2_version=2.1.214
+playwright_version=1.31.0
 kotlin.code.style=official
